upto async setup

--- a/src/app/alert/alert.component.html
+++ b/src/app/alert/alert.component.html
@@ -1,5 +1,5 @@
 <div class="w-500">
-  <div class="alert alert-success" role="alert" [hidden]="visible">
+  <div class="alert alert-success" role="alert" [hidden]="!visible">
     <h4 class="alert-heading">素晴らしい！</h4>
     <p>
       そうそう、あなたはこの重要な警告メッセージをうまく読んだ。
