--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
+<div class="d-flex p-3 justify-content-center border-bottom">
+  <button type="button" class="btn btn-info mx-3" routerLink="/alert">Alert</button>
+  <button type="button" class="btn btn-info mx-3" routerLink="/blockquote">Blockquote</button>
+  <button type="button" class="btn btn-info mx-3" routerLink="/message">Message</button>
+  <button type="button" class="btn btn-info mx-3" routerLink="/formet">Formet</button>
+  <button type="button" class="btn btn-info mx-3" routerLink="/reactive">Reactive Form</button>
+  <button type="button" class="btn btn-info mx-3" routerLink="/login">Login Form</button>
+</div>
 <div class="parent">
   <router-outlet></router-outlet>
 </div>
