--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <button type="button" class="btn btn-info mx-3" routerLink="/message">Message</button>
   <button type="button" class="btn btn-info mx-3" routerLink="/formet">Formet</button>
   <button type="button" class="btn btn-info mx-3" routerLink="/reactive">Reactive Form</button>
-  <button type="button" class="btn btn-info mx-3" routerLink="/login">Login Form</button>
+  <button type="button" class="btn btn-info mx-3" routerLink="/gallery">Gallery</button>
 </div>
 <div class="parent">
   <router-outlet></router-outlet>
