--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="d-flex p-3 justify-content-center border-bottom">
   <button type="button" class="btn btn-info mx-3" routerLink="/alert">Alert</button>
+  <button type="button" class="btn btn-info mx-3" routerLink="/note">Note</button>
   <button type="button" class="btn btn-info mx-3" routerLink="/blockquote">Blockquote</button>
   <button type="button" class="btn btn-info mx-3" routerLink="/message">Message</button>
   <button type="button" class="btn btn-info mx-3" routerLink="/formet">Formet</button>
